tests/golden/type_errors/for_break_inside_function.cd
for let i = 0; i < 1; i = i + 1 {
  fun bad() {
    break;
  }
}
